<resources>
    <string name="app_name">Creator-Editor Brokerage Application</string>
    <string name="facebook_app_id">871598669995139</string>
    <string name="fb_login_protocol_scheme">fb871598669995139</string>

    <!-- Common -->
    <string name="ok">확인</string>

    <!-- Verification -->
    <string name="code_lost">인증번호가 손실되었습니다.</string>
    <string name="code_sent">인증번호가 발송되었습니다.</string>
    <string name="invalid_request">유효하지 않은 요청입니다. 전화번호를 확인해주세요.</string>
    <string name="too_many_requests">너무 많은 요청으로 인증요청이 차단되었습니다.\n잠시 후 다시 시도해주십시오.</string>
    <string name="verification_failed">인증에 실패했습니다.</string>

    <!-- Chat -->
    <string name="chat_message_sending_failure_message">메시지 전송에 실패했습니다.</string>
    <string name="chat_room_creation_failure_message">채팅방 생성에 실패했습니다.</string>
    <string name="chat_room_creation_success_message">채팅방이 생성되었습니다.</string>
    <string name="chat_room_not_found">채팅방을 찾지 못했습니다.</string>
    <string name="failed_to_find_publisher">퍼블리셔를 찾을 수 없습니다.</string>
    <string name="start_chatting">채팅을 시작합니다.</string>

    <!-- Sign in and sign up -->
    <string name="authentication_failure_message">인증에 실패했습니다.</string>
    <string name="cancel">취소</string>
    <string name="id">아이디</string>
    <string name="login">로그인</string>
    <string name="password">비밀번호</string>
    <string name="profile_image">Profile image</string>
    <string name="request_id_message">아이디를 입력해주세요.</string>
    <string name="request_password_message">비밀번호를 입력해주세요.</string>
    <string name="sign_in">가입하기</string>
    <string name="sign_in_failure_message">로그인에 실패했습니다.</string>
    <string name="request_sign_in_and_profile_creation">로그인 및 프로필 작성 후에 서비스를 이용하실 수 있습니다.</string>
    <string name="sign_in_message">로그인 되었습니다.</string>
    <string name="sign_out_message">로그아웃 되었습니다.</string>
    <string name="sign_up_message">회원가입이 완료되었습니다.</string>
    <string name="sign_up_with_email">이메일로 가입하기</string>
    <string name="start_with_facebook">페이스북으로 시작하기</string>
    <string name="start_with_google">구글로 시작하기</string>

    <!-- Permissions -->
    <string name="request_sms_receive_permission">SMS 수신권한을 승인하셔야 본인인증을 진행하실 수 있습니다.</string>

    <!-- content categories -->
    <string name="category_car">자동차</string>
    <string name="category_beauty_fashion">뷰티/패션</string>
    <string name="category_comedy">코미디</string>
    <string name="category_education">교육</string>
    <string name="category_entertainment">엔터테인먼트</string>
    <string name="category_family_entertainment">가족 엔터테인먼트</string>
    <string name="category_movie_animation">영화/애니메이션</string>
    <string name="category_food">음식</string>
    <string name="category_game">게임</string>
    <string name="category_know_how_style">노하우/스타일</string>
    <string name="category_music">음악</string>
    <string name="category_news_politics">뉴스/정치</string>
    <string name="category_non_profit_social_movement">비영리/사회운동</string>
    <string name="category_people_blog">인물/블로그</string>
    <string name="category_pets_animals">애완동물/동물</string>
    <string name="category_science_technology">과학기술</string>
    <string name="category_sports">스포츠</string>
    <string name="category_travel_event">여행/이벤트</string>

    <!-- Profile -->
    <string name="already_verified">이미 인증하셨습니다.</string>
    <string name="image_upload_failed">이미지 업로드에 실패했습니다.</string>
    <string name="profile_creation">프로필 작성</string>
    <string name="request_profile_creation">프로필 작성 후에 서비스를 이용하실 수 있습니다.</string>
    <string name="profile_set">프로필을 등록했습니다.</string>
    <string name="profile_set_failed">프로필 등록에 실패했습니다.</string>
    <string name="profile_updated">프로필을 업데이트했습니다.</string>
    <string name="profile_update_failed">프로필 업데이트에 실패했습니다.</string>
    <string name="request_name">이름을 입력해주세요.</string>
    <string name="request_phone_number">전화번호를 입력해주세요.</string>
    <string name="request_public_name">공개 이름을 입력해주세요.</string>
    <string name="request_verification">본인인증을 진행해주세요.</string>
    <string name="request_class_selection">클래스를 선택해주세요.</string>

    <!-- token -->
    <string name="token_generation_failed">토큰 생성에 실패했습니다.</string>
    <string name="token_storage_failed">토큰 저장에 실패했습니다.</string>

    <!-- data -->
    <string name="data_read_failed">데이터를 읽어오는데 실패했습니다.</string>

    <!-- navigation drawer -->
    <string name="my_stars">나의 별</string>
    <string name="partners">파트너</string>
    <string name="preferences">환경설정</string>
    <string name="sign_out">로그아웃</string>
    <string name="watchlist">관심목록</string>

    <!-- home toolbar menu -->
    <string name="search">검색</string>
    <string name="filter">필터</string>
    <string name="notifications">알림</string>
    <string name="category_filter">카테고리 필터</string>

    <!-- pr item view -->
    <string name="thumbnail">Thumbnail</string>

    <!-- firebase -->
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="ask_for_update_on_partners">파트너스 정보를 업데이트 하시겠습니까?</string>
    <string name="ask_for_register_on_partners">파트너스에 등록하시겠습니까?</string>
    <string name="updated_on_partners">파트너스 정보가 업데이트 되었습니다.</string>
    <string name="failed_to_update_on_partners">파트너스 업데이트에 실패했습니다.</string>
    <string name="register_on_partners">파트너스에 등록했습니다.</string>
    <string name="failed_to_register_on_partners">파트너스 등록에 실패했습니다.</string>
    <string name="complete">완료</string>
    <string name="add">add</string>
    <string name="add_channel">채널 추가</string>
    <string name="no_registered_channel">등록된 채널이 없습니다.</string>

    <string name="title">제목</string>
    <string name="description">설명</string>
    <string name="select_categories">카테고리 선택 (1개 이상 선택)</string>
    <string name="playlist_selection">플레이리스트 선택</string>

    <string name="creator">크리에이터</string>
    <string name="editor">에디터</string>
    <string name="all_videos">모든 비디오</string>
    <string name="authorization_server_connection_failed">인증 서버 연결에 실패했습니다.</string>
    <string name="failed_to_get_access_token">액세스 토큰을 얻는데 실패했습니다.</string>
    <string name="failed_to_load_channels">채널을 불러오는데 실패했습니다.</string>
    <string name="failed_to_update_channel_ids">채널 아이디 업데이트에 실패했습니다.</string>
    <string name="channel_already_registered">이미 등록된 채널입니다.</string>
    <string name="failed_to_register_channel">채널을 등록하는데 실패했습니다.</string>
    <string name="channel_id_not_found">채널 ID를 찾을 수 없습니다.</string>
    <string name="failed_to_load_playlists">재생목록을 불러오는데 실패했습니다.</string>
    <string name="request_check_internet_connection">인터넷 연결을 확인하십시오.</string>
    <string name="unknown_error_occured">알 수 없는 오류가 발생했습니다.</string>
    <string name="invalid_api_key">API 키가 유효하지 않습니다.</string>
    <string name="channels_not_found">채널을 찾지 못했습니다.</string>
    <string name="n_channels_not_found">개의 채널을 찾지 못했습니다.</string>
    <string name="failed_to_load_videos">비디오를 불러오는데 실패했습니다.</string>
    <string name="only_videos_uploaded_by_you_can_be_registered">직접 업로드한 동영상만 등록할 수 있습니다.</string>
    <string name="invalid_channel_id">채널 ID가 유효하지 않습니다.</string>
    <string name="playlist_id_not_found">플레이리스트 ID를 찾지 못했습니다.</string>

    <string name="player_initialization_failure_message">플레이어를 초기화하는데 실패했습니다. 유튜브를 최신 버전으로 업데이트 하십시오.</string>
    <string name="failed_to_load_video">비디오를 불러오는데 실패했습니다.</string>
    <string name="register">등록</string>

    <string name="failed_to_load_image">이미지를 불러오는데 실패했습니다.</string>

    <string name="write_pr">PR 작성</string>
    <string name="select_type">타입 선택</string>

    <string name="find_creator">크리에이터 찾기</string>
    <string name="find_editor">편집자 찾기</string>
    <string name="menu_bar">Menu bar</string>
    <string name="name">이름</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="verification">본인인증</string>
    <string name="select_class">클래스 선택</string>
    <string name="public_name">공개 이름</string>
    <string name="pr">PR</string>
    <string name="save">저장</string>
    <string name="register_to_partners">파트너스 등록</string>
    <string name="registered_works">등록된 작품 (0/3)</string>
    <string name="show_my_pr">내 PR 보기</string>

    <string name="registered_pr_not_found">등록된 PR을 찾지 못했습니다.</string>

    <string name="no_registered_video">등록된 비디오가 없습니다.</string>

    <!--string name="default_web_client_id">279682383751-rdjblp84735k1piq5ra4c61ti6a1mlgr.apps.googleusercontent.com</string> -->
    <!-- 279682383751-umfg61b7i143qabqbootevo4osdvurbl.apps.googleusercontent.com -->
    <!-- 279682383751-rdjblp84735k1piq5ra4c61ti6a1mlgr.apps.googleusercontent.com -->

</resources>
