<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:text="Sign up"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:hint="@string/id"
            android:autofillHints="id"
            android:inputType="text"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/button_sign_up"
            style="@style/LoginButtonTheme"
            android:layout_gravity="center_horizontal"
            android:layout_margin="6dp"
            android:text="@string/sign_in"/>

    </LinearLayout>

</FrameLayout>