<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_fragment_my_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".fragments.MyInfoFragment">

    <include layout="@layout/fragment_my_info"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/background_rounded_corners">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_rounded_corners">

            <TextView
                android:id="@+id/text_view_preferences"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/preferences"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_settings_32dp"/>

            <TextView
                android:id="@+id/text_view_partners"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/partners"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_people_32dp"/>

            <TextView
                android:id="@+id/text_view_watchlist"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/watchlist"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_heart_32dp"/>

            <TextView
                android:id="@+id/text_view_my_stars"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/my_stars"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_star_32dp"/>

            <TextView
                android:id="@+id/text_view_sign_out"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_out"
                android:textSize="16sp"
                android:textStyle="bold"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_sign_out_32dp"/>

        </LinearLayout>


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>