<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.WritingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:autofillHints="title"
                        android:hint="@string/title"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_text_description"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:gravity="top"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:autofillHints="description"
                        android:hint="@string/description"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/select_type" />

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_categories"
                    android:padding="8dp"/>

               <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_categories_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="8dp"/>

                    <Spinner
                        android:id="@+id/spinner_categories_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="8dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registered_works"
                    android:padding="8dp"/>

                <LinearLayout
                    android:id="@+id/linear_layout_image_view_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical">

                    <ImageView
                        android:id="@+id/image_view_add_1"
                        style="@style/AddImageViewTheme"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/thumbnail"
                        app:srcCompat="@drawable/ic_add_to_photos_grey_80dp" />

                    <ImageView
                        android:id="@+id/image_view_add_2"
                        style="@style/AddImageViewTheme"
                        android:layout_marginStart="24dp"
                        android:contentDescription="@string/thumbnail"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_add_to_photos_grey_80dp"/>

                    <ImageView
                        android:id="@+id/image_view_add_3"
                        style="@style/AddImageViewTheme"
                        android:layout_marginStart="24dp"
                        android:contentDescription="@string/thumbnail"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_add_to_photos_grey_80dp"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_upload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:textSize="20sp"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</FrameLayout>